if (IMMVISION_HAS_OPENCV)
    set(CMAKE_CXX_STANDARD 20)
    hello_imgui_add_app(demo_immvision demo_immvision.main.cpp)
    target_link_libraries(demo_immvision PRIVATE immvision opencv_imgproc opencv_imgcodecs)
else()
    message("OpenCV not found, skipping demo_immvision (requires OpenCV)")
endif()
