if (IMMVISION_HAS_OPENCV)
    include(${HELLOIMGUI_BASEPATH}/hello_imgui_cmake/hello_imgui_add_app.cmake)
    hello_imgui_add_app(demo_inspector demo_inspector.main.cpp)
    target_link_libraries(demo_inspector PRIVATE immvision opencv_imgproc opencv_imgcodecs)
else()
    message("OpenCV not found, skipping demo_inspector (requires OpenCV)")
endif()
